--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 <BODY onload="window.setTimeout('elizaReset()',100)">
 
   <FORM NAME="e_form" onsubmit="elizaStep();return false">
-    <TEXTAREA readonly="true" NAME="e_display" style="width:100%;height:90%;"></TEXTAREA>
-    <INPUT placeholder="Enter responses here" style="height:10%;width:100%" TYPE="text" NAME="e_input">
+    <TEXTAREA readonly="true" NAME="e_display"></TEXTAREA>
+    <INPUT placeholder="Enter responses here" TYPE="text" NAME="e_input">
     </TR>
   </FORM>
 
@@ -70,10 +70,12 @@
     background-color: #fefae0;
     color: #283618;
     font-size: large;
+    width: 100vw;
   }
 
   input {
     font-size: large;
+    width: 100vw;
   }
 </style>
 
