--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
   textarea {
     background-color: #fefae0;
     color: #283618;
-    font-size: large;
     width: 100vw;
+    height: calc(100vh - 40px);
   }
 
   input {
-    font-size: large;
     width: 100vw;
+    height: 40px;
   }
 </style>
 
