--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
   <SCRIPT LANGUAGE="JavaScript" TYPE="text/javascript" SRC="elizadata.js"></SCRIPT>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
- <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <SCRIPT LANGUAGE="JavaScript" TYPE="text/javascript">
 
     var eliza = new ElizaBot();
     var elizaLines = new Array();
 
-    var displayCols = 60;
-    var displayRows = 20;
+    window.onload = function () {
+      document.getElementById("input").focus();
+    }
 
     function elizaReset() {
       eliza.reset();
@@ -55,7 +56,7 @@
 
   <FORM NAME="e_form" onsubmit="elizaStep();return false">
     <TEXTAREA readonly="true" NAME="e_display"></TEXTAREA>
-    <INPUT placeholder="Enter responses here" TYPE="text" NAME="e_input">
+    <INPUT id="input" placeholder="Enter responses here" TYPE="text" NAME="e_input">
     </TR>
   </FORM>
 
